<resources>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="unkown_device">Unknown device</string>
    <string name="error_BLE_not_supported">BLE not supported</string>
    <string name="unknown_service">unkown service</string>
    <string name="unknown_characteristic">unknown characteristic</string>
    <string name="app_name">MyHeartHealth</string>
    <string name="title_activity_connect_enter">Connect and Enter</string>
    <string name="title_activity_questions">Questions</string>
    <string name="yes">Yes.</string>
    <string name="no">no</string>
    <string name="Question_1">Are you experiencing chest pain? </string>
    <string name="Question_2">Do you have pain in your arm(s), back, neck, or jaw?</string>
    <string name="Question_3">Do you have stomach pain?</string>
    <string name="Question_4">Are you experiencing shortness of breath, nausea or lightheadedness?</string>
    <string name="Question_5">Are you breaking out in a sweat?</string>
    <string name="Question_6">Are you experiencing fatigue?</string>
    <string name="action_settings">Settings</string>
    <string name="emergency">Phone for an ambulance immediately </string>
    <string name="ok">OK</string>
    <string name="come_back">come back if things deteriorate </string>
    <string name="title_activity_pill_scheduler">PillScheduler</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>]
    <string name="Drug_name">Drug Name</string>
    <string name="Drug_strength">Drug Strength</string>
    <string name="Time">Time to take</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="Device_address">device Address</string>
    <string name="label_state">state</string>
    <string name="disconnected">disconnected</string>
    <string name="label_data">BPM</string>
    <string name="no_data">no data</string>
    <string name="connected">connected</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_graphviews">graphviews</string>


</resources>
